--- a/style.css
+++ b/style.css
@@ -302,3 +302,92 @@ width: 100%;
 
 
 
+
+.btn {
+  position: relative;
+  padding: 12px 24px;
+  font-size: 16px;
+  border: 2px solid #ff9d00;
+  background: transparent;
+  color: white;
+  overflow: hidden;
+  border-radius: 8px;
+  z-index: 1;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #ffd447 , #FFA500 );
+  border-right: 10px solid #4f78c0;
+  z-index: -1;
+  transition: left 0.4s ease;
+}
+
+.btn:hover::before {
+  
+  left: 100%;
+}
+
+.btn:hover {
+    border-right: 10px solid #4f78c0;
+  color: #FFA500;
+}
+
+.btn2:hover {
+    border-right: 10px solid #4f78c0;
+  color: #FFA500;
+  background: #ffffff;
+
+
+
+
+}
+
+h2 span:hover {
+  color: #000000;
+  transition: color 0.3s ease;
+}
+.tab3:hover {
+  background: linear-gradient(to top, #B8E7FA, #E6E6FA);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.02);
+  transition: transform 0.3s ease;
+}
+
+.tab2:hover {
+  background: linear-gradient(to top, #B8E7FA, #E6E6FA);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.02);
+  transition: transform 0.3s ease;
+}
+.tab:hover {
+  background: linear-gradient(to top, #B8E7FA, #E6E6FA);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.02);
+  transition: transform 0.3s ease;
+}
+h2:hover {
+  color: #FFA500;
+  transition: color 0.3s ease;
+}
+img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+p:hover {
+  color: #0148c3;
+  transition: color 0.3s ease;
+}
+a:hover {
+  color: #ff0901;
+  transition: color 0.3s ease;
+}
+iframe:hover {
+  transform: scale(0.85);
+  transition: transform 0.3s ease;
+}
