--- a/responsive.css
+++ b/responsive.css
@@ -3,7 +3,10 @@
 .hero{
     margin: 30px 10px 30px 10px;}
 
+.imgh{
 
+    width: 30%;
+}
 
     .hero2 {
         padding: 10px;
@@ -13,12 +16,14 @@
 
     .hero2 h2 {
         font-size: 18px;
-        margin-bottom: 15px;
+        margin-bottom: 2px;
+        margin-top: 2px;
     }
 
     .hero2 p {
         font-size: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 2px;
+        margin-top: 2px;
     }
 .blog{
     
