--- a/responsive.css
+++ b/responsive.css
@@ -19,6 +19,7 @@
         margin-bottom: 2px;
         margin-top: 2px;
     }
+    
 
     .hero2 p {
         font-size: 10px;
@@ -123,14 +124,25 @@ color: #0D1321;
     border-radius: 10px;
 } 
 .yt iframe{
-    font-size: 1.5rem;
+   
+   font-size: 1.5rem;
     color: #000000;
     font-style: bold;
     margin-bottom: 20px;
     border: #C6DBFF;
     border-radius: 10px;
+   
+
+  
+    box-shadow: 2px 2px 10px rgba(175, 71, 71, 0.1);
+ border-right: 10px solid #4f78c0;
+  border-left: 10px solid #4f78c0;
+  
+    border-radius: 10px;
     width: 92%;
-    height: 230px;}
+    height: 230px;
+   
+}
 
 .terget{
     text-align: center;
@@ -290,8 +302,11 @@ color: #0D1321;
     margin-bottom: 20px;
     border: #C6DBFF;
     border-radius: 10px;
-    width: 92%;
-    height: 230px;}
+    width: 100%;
+     border-right: 10px solid #4f78c0;
+  border-left: 10px solid #4f78c0;
+    
+   }
 
 .terget{
     text-align: center;
