--- a/responsive.css
+++ b/responsive.css
@@ -61,6 +61,20 @@ display: inline-block;
        margin: 0px;
 }
 
+    #header-logo h2{
+    font-size: 20px;
+   
+   
+}
+
+
+.btn{
+    padding: 15px 30px;
+    border: none;
+  
+    
+}
+
 .blog1{
     margin-bottom: 5px;}
 
